discussion/kv_engine/184967/184967_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54850: wip

Change-Id: I453339fd9dcbe9cbd4dcd8f4c54a18cd8543d5ca

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2023-01-13 12:59:39.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2023-01-13 12:59:51.000000000
Message: 
Patch Set 3: Well-Formed+1

Permission granted to commit: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/332392/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-01-13 13:38:29.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22141/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/utilities/debug_variable.h b/utilities/debug_variable.h
index 55f4018fe..a390fbe36 100644
--- a/utilities/debug_variable.h
+++ b/utilities/debug_variable.h
@@ -87,7 +87,7 @@ public:
     }
 
     DebugVariable(const DebugVariable&amp;) = delete;
-    DebugVariable(DebugVariable&amp;&amp;) = delete;
+    DebugVariable(DebugVariable &amp;&amp;) = delete;
 
     DebugVariable&amp; operator=(const DebugVariable&amp;) = delete;
     DebugVariable&amp; operator=(DebugVariable&amp;&amp;) = delete;

EOF
</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22141/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/787/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/tests/module_tests/dcp_utils.h:64:9: error: unknown type name "CollectionID" [clang-diagnostic-error]
        CollectionID cid);
        ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/787/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/tests/module_tests/dcp_utils.h:64:9:
error: unknown type name "CollectionID" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/787/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/965/ : FAILURE

Failure of GoogleTest "Persistent/CDCPassiveStreamTest.HistorySnapshotReceived_Disk/persistent_magma_value_only":

<pre>
[ RUN      ] Persistent/CDCPassiveStreamTest.HistorySnapshotReceived_Disk/persistent_magma_value_only
..\kv_engine\engines\ep\tests\module_tests\dcp_stream_test.cc(5359): error: Expected equality of these values:
  1
  vb.getNumTotalItems()
    Which is: 3
[  FAILED  ] Persistent/CDCPassiveStreamTest.HistorySnapshotReceived_Disk/persistent_magma_value_only, where GetParam() = "bucket_type=persistent:backend=magma:item_eviction_policy=value_only" (66 ms)
Persistent/CDCPassiveStreamTest.HistorySnapshotReceived_Disk/persistent_magma_value_only
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/965/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/793/ : FAILURE

Failure of GoogleTest "Persistent/CDCPassiveStreamTest.HistorySnapshotReceived_Disk/persistent_magma_value_only":

<pre>
[ RUN      ] Persistent/CDCPassiveStreamTest.HistorySnapshotReceived_Disk/persistent_magma_value_only
[2023-01-13T13:11:31.597Z] ../kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:5359: Failure
[2023-01-13T13:11:31.597Z] Expected equality of these values:
[2023-01-13T13:11:31.597Z]   1
[2023-01-13T13:11:31.597Z]   vb.getNumTotalItems()
[2023-01-13T13:11:31.597Z]     Which is: 3
[2023-01-13T13:11:31.597Z] [  FAILED  ] Persistent/CDCPassiveStreamTest.HistorySnapshotReceived_Disk/persistent_magma_value_only, where GetParam() = "bucket_type=persistent:backend=magma:item_eviction_policy=value_only" (36 ms)
Persistent/CDCPassiveStreamTest.HistorySnapshotReceived_Disk/persistent_magma_value_only
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/793/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/806/ : FAILURE

Failure of GoogleTest "Persistent/CDCPassiveStreamTest.HistorySnapshotReceived_Disk/persistent_magma_value_only":

<pre>
[ RUN      ] Persistent/CDCPassiveStreamTest.HistorySnapshotReceived_Disk/persistent_magma_value_only
[2023-01-13T13:20:59.641Z] ../kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:5359: Failure
[2023-01-13T13:20:59.641Z] Expected equality of these values:
[2023-01-13T13:20:59.641Z]   1
[2023-01-13T13:20:59.641Z]   vb.getNumTotalItems()
[2023-01-13T13:20:59.641Z]     Which is: 3
[2023-01-13T13:20:59.641Z] [  FAILED  ] Persistent/CDCPassiveStreamTest.HistorySnapshotReceived_Disk/persistent_magma_value_only, where GetParam() = "bucket_type=persistent:backend=magma:item_eviction_policy=value_only" (390 ms)
Persistent/CDCPassiveStreamTest.HistorySnapshotReceived_Disk/persistent_magma_value_only
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/806/ )

ThreadSanitizer issue: lock-order-inversion (potential deadlock) (/opt/gcc-10.2.0/lib64/libtsan.so.0+0x7719f) in AnnotateRWLockAcquired  ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/806/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/798/ : FAILURE

Failure of GoogleTest "Persistent/CDCPassiveStreamTest.HistorySnapshotReceived_Disk/persistent_magma_value_only":

<pre>
[ RUN      ] Persistent/CDCPassiveStreamTest.HistorySnapshotReceived_Disk/persistent_magma_value_only
[2023-01-13T13:06:22.865Z] ../kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:5359: Failure
[2023-01-13T13:06:22.865Z] Expected equality of these values:
[2023-01-13T13:06:22.865Z]   1
[2023-01-13T13:06:22.865Z]   vb.getNumTotalItems()
[2023-01-13T13:06:22.865Z]     Which is: 3
[2023-01-13T13:06:22.865Z] [  FAILED  ] Persistent/CDCPassiveStreamTest.HistorySnapshotReceived_Disk/persistent_magma_value_only, where GetParam() = "bucket_type=persistent:backend=magma:item_eviction_policy=value_only" (53 ms)
Persistent/CDCPassiveStreamTest.HistorySnapshotReceived_Disk/persistent_magma_value_only
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/798/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/799/ : FAILURE

Failure of GoogleTest "Persistent/CDCPassiveStreamTest.HistorySnapshotReceived_Disk/persistent_magma_value_only":

<pre>
[ RUN      ] Persistent/CDCPassiveStreamTest.HistorySnapshotReceived_Disk/persistent_magma_value_only
[2023-01-13T13:15:25.127Z] ../kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:5359: Failure
[2023-01-13T13:15:25.127Z] Expected equality of these values:
[2023-01-13T13:15:25.127Z]   1
[2023-01-13T13:15:25.127Z]   vb.getNumTotalItems()
[2023-01-13T13:15:25.127Z]     Which is: 3
[2023-01-13T13:15:25.127Z] [  FAILED  ] Persistent/CDCPassiveStreamTest.HistorySnapshotReceived_Disk/persistent_magma_value_only, where GetParam() = "bucket_type=persistent:backend=magma:item_eviction_policy=value_only" (75 ms)
Persistent/CDCPassiveStreamTest.HistorySnapshotReceived_Disk/persistent_magma_value_only
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/799/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1075/ : FAILURE

Failure of GoogleTest "Persistent/CDCPassiveStreamTest.HistorySnapshotReceived_Disk/persistent_magma_value_only":

<pre>
[ RUN      ] Persistent/CDCPassiveStreamTest.HistorySnapshotReceived_Disk/persistent_magma_value_only
[2023-01-13T13:12:59.155Z] ../kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:5359: Failure
[2023-01-13T13:12:59.155Z] Expected equality of these values:
[2023-01-13T13:12:59.155Z]   1
[2023-01-13T13:12:59.155Z]   vb.getNumTotalItems()
[2023-01-13T13:12:59.155Z]     Which is: 3
[2023-01-13T13:12:59.155Z] [  FAILED  ] Persistent/CDCPassiveStreamTest.HistorySnapshotReceived_Disk/persistent_magma_value_only, where GetParam() = "bucket_type=persistent:backend=magma:item_eviction_policy=value_only" (33 ms)
Persistent/CDCPassiveStreamTest.HistorySnapshotReceived_Disk/persistent_magma_value_only
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1075/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/808/ : FAILURE

Failure of GoogleTest "TransportProtocols/InterfacesTest.Mcbp/Mcbp":

<pre>
[ RUN      ] TransportProtocols/InterfacesTest.Mcbp/Mcbp
[2023-01-13T13:09:15.940Z] unknown file: Failure
[2023-01-13T13:09:15.940Z] C++ exception with description "MemcachedConnection::recvFrame(): Timed out after waiting 2000ms for a response for IFCONFIG" thrown in the test body.
[2023-01-13T13:09:15.940Z] [  FAILED  ] TransportProtocols/InterfacesTest.Mcbp/Mcbp, where GetParam() = Mcbp (2012 ms)
TransportProtocols/InterfacesTest.Mcbp/Mcbp
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/808/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/758/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/779/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
